--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,15 +1,27 @@
----
-title: Le Wagon - Middleman
----
+  ---
+  <title: Le Wagon - Middleman>
+  ---
 
-<div id="home">
-  <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
-    <p>
-      Middleman is now running!
-    </p>
-    <p class="about">
-      <%= link_to "More about this template", "about.html" %>
-    </p>
+  <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
+    <div class="banner-content">
+      <h1>Welcome home</h1>
+      <p>Book unique homes and experience a city like a local.</p>
+    </div>
+    <div>
+    <%= partial 'components/form' %>
+    </div>
   </div>
-</div>
+
+
+  <div class = "container">
+  <h2>Recents flats</h2>
+    <div class = "row">
+      <% 9.times do %>
+     <div class = "col-xs-12 col-sm-6 col-md-4">
+      <%= partial 'components/cards' %>
+      </div>
+      <% end %>
+    </div>
+  </div>
+
+
