--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -7,9 +7,11 @@
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-    <a href="/team.html" class="navbar-wagon-item navbar-wagon-link">About</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Trips</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Messages</a>
+
+<%= link_to "About", "team.html", class: "navbar-wagon-item navbar-wagon-link" %>
+<%= link_to "Trips", "", class: "navbar-wagon-item navbar-wagon-link" %>
+<%= link_to "Messages", "", class: "navbar-wagon-item navbar-wagon-link" %>
+
 
     <!-- Profile picture with dropdown list -->
     <div class="navbar-wagon-item">
